feat: add readiness probe
